// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`has billable hours 1`] = `
<div>
  <div
    class="LinearBuffer-root css-kxh77f"
  >
    <div
      class="MuiBox-root css-70qvj9"
    >
      <div
        class="MuiBox-root css-1bhivts"
      >
        <span
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="65"
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-buffer css-fl5ss-MuiLinearProgress-root"
          role="progressbar"
        >
          <span
            class="MuiLinearProgress-dashed MuiLinearProgress-dashedColorPrimary css-8ub8io-MuiLinearProgress-dashed"
          />
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Buffer css-qhoknl-MuiLinearProgress-bar1"
            style="transform: translateX(-35.13513513513513%);"
          />
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-colorPrimary MuiLinearProgress-bar2Buffer css-1qdnzt4-MuiLinearProgress-bar2"
            style="transform: translateX(-18.91891891891892%);"
          />
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 MuiTypography-alignRight css-15l36n3-MuiTypography-root"
      style="display: block;"
    >
      Billable Hours: 
      1200
       - Contribution Hours:
       
      1500
       - Target Hours: 
      1850
       - PTO Hours:
       
       
      0
       - Billable Utilization:
       
       
      (none)
       - Overtime Worked:
       
       
      (none)
    </p>
  </div>
</div>
`;

exports[`has no billable hours 1`] = `
<div>
  <div
    class="LinearBuffer-root css-kxh77f"
  >
    <div
      class="MuiBox-root css-70qvj9"
    >
      <div
        class="MuiBox-root css-1bhivts"
      >
        <span
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="81"
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-eglki6-MuiLinearProgress-root"
          role="progressbar"
        >
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
            style="transform: translateX(-18.91891891891892%);"
          />
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 MuiTypography-alignRight css-15l36n3-MuiTypography-root"
      style="display: block;"
    >
      Billable Hours: 
      0
       - Contribution Hours:
       
      1500
       - Target Hours: 
      1850
       - PTO Hours:
       
       
      0
       - Billable Utilization:
       
       
      (none)
       - Overtime Worked:
       
       
      (none)
    </p>
  </div>
</div>
`;
